[tool.poetry]
name = "exencolorlogs"
version = "1.0.2"
description = "A module for nice looking colored logs."
authors = ["Exenifix"]
license = "MIT"
repository = "https://github.com/Exenifix/exencolorlogs"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
exencolor = ">=1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
